--- a/second/index.html
+++ b/second/index.html
@@ -1,1 +1,23 @@
 <!-- Put your HTML HERE, make sure to connect your index.css sheet -->
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Page Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" media="screen" href="index.css" />
+    <script src="main.js"></script>
+</head>
+<body>
+    <header>
+        <div class="purple"></div>
+        <div class="green"></div>
+        <div class="circle"></div>
+    </header>
+    <div class="middle">
+        <div class="center"></div>
+    </div>
+    <footer>HELLO<br>FRIENDS</footer>
+</body>
+</html>
