--- a/third/index.html
+++ b/third/index.html
@@ -1,1 +1,26 @@
 <!-- Put your HTML HERE, make sure to connect your index.css sheet -->
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Page Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" media="screen" href="index.css" />
+    <script src="main.js"></script>
+</head>
+<body>
+    <header>
+        <div id="logo"></div>
+    </header>
+    <div>
+    <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sapien ipsum, fringilla et odio at, hendrerit fermentum ante. Morbi imperdiet convallis sem ac iaculis. Nulla ornare dolor non ipsum facilisis, nec efficitur nisl egestas. Ut fermentum sem ac justo varius, ut pellentesque turpis volutpat. In quis viverra lectus, in aliquet turpis. Mauris non tincidunt odio. Aliquam non vehicula nibh, et scelerisque felis. Cras commodo leo quis tincidunt imperdiet. Pellentesque vel lobortis elit. In mattis consequat diam.
+    </p>
+    </div>
+    <div class="rows" id ="blue"></div>
+    <div class="rows" id ="blue-green"></div>
+    <div class="rows" id ="green"></div>
+    <div class="rows" id ="yellow"></div>
+</body>
+</html>
